# meshingo

./: .gitignore  404.html  README.md  _redirects  index.html  pyproject.toml
ADRs/: 0000-bayesian-optimization-framework.md  0001-gp-as-surrogate-model.md  0002-stl-featurization.md  0003-objectives-stage-1.md  0004-optimization-stratey-stage-2.md  0005-cross-validation.md  0006-meshing-tool-stage-1.md  0007-meshingo-cli.md
app/: create-script.sh  meshingo
assets/: Mermaid.vue_vue_type_script_setup_true_lang-49gZvGSW.js  Mermaid.vue_vue_type_script_setup_true_lang-CYudTnkY.js  Mermaid.vue_vue_type_script_setup_true_lang-DEzK6Z0C.js  Mermaid.vue_vue_type_script_setup_true_lang-DWqfWyvM.js  Mermaid.vue_vue_type_script_setup_true_lang-Dg4yKvYf.js  Mermaid.vue_vue_type_script_setup_true_lang-DvKVDhLc.js  Mermaid.vue_vue_type_script_setup_true_lang-UcUQxZ2h.js  Mermaid.vue_vue_type_script_setup_true_lang-mqMmA_7W.js  Mermaid.vue_vue_type_script_setup_true_lang-vMD9t8r_.js  adr-data.json  architectureDiagram-RWNHDUBN-CcFFZV_m.js  architectureDiagram-RWNHDUBN-CmheeMRg.js  architectureDiagram-RWNHDUBN-D411Y-W2.js  architectureDiagram-RWNHDUBN-DB8ovZsY.js  architectureDiagram-RWNHDUBN-D_nhGVJT.js  architectureDiagram-RWNHDUBN-Dr8ju1oD.js  architectureDiagram-RWNHDUBN-DzEUvOD7.js  architectureDiagram-RWNHDUBN-jHGFypub.js  architectureDiagram-RWNHDUBN-qD5Zn1yg.js  blockDiagram-XZSR5OGQ-BCF51bz4.js  blockDiagram-XZSR5OGQ-BKcLHTny.js  blockDiagram-XZSR5OGQ-BwUWceyp.js  blockDiagram-XZSR5OGQ-CctatlM2.js  blockDiagram-XZSR5OGQ-Dpzhgbgt.js  blockDiagram-XZSR5OGQ-DsQAa2r1.js  (+514 more)
(+248 files in other folders)
