[project]
name = "meshingo"
version = "0.0.1"
description = "A recommender system for optimal mesh cell sizes. Takes only an STL file as input."
readme = "README.md"
requires-python = "==3.10"
dependencies = [
    "pyfoam>=2023.7",
    "trimesh>=4.6.3",
    "scipy>=1.15.2",
    "pandas>=2.2.3",
    "networkx>=3.4.2",
    "tqdm>=4.67.1",
    "kaleido==0.2.1",
    "foambo==0.1.2",
    "rtree>=1.3.0",
    "pyvista>=0.43.0",
    "jq>=1.8.0",
    "open3d>=0.19.0",
]

[project.scripts]
get-similar-surface = "get_similar_surface:main"
compute-geometric-features = "geo_features:main"
compute-cell-size = "compute_cell_size:main"
compute-objectives = "compute_objectives:main"
predict-cell-size = "predict_cell_size:main"
bias-geo-features = "bias_geo_features:main"
validate = "validate_model:main"

[tool.setuptools.packages.find]
where = ["src"]
exclude = [
    "build",
    "stage1",
    "stage2",
    "outputs",
    "template_case",
    "training_dataset",
    "testing_dataset",
    "containers",
    "ADRs",
    "trials",
    "slidev",
]

[tool.uv]
dev-dependencies = [
    "ipython>=8.32.0",
]
package = true
